--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -14,7 +14,7 @@
 	-fx-border-color: #b0b0b0; 
 }
 
-.button{
+.accept_button{
 	-fx-background-color: #26c6da;
 	-fx-font-size: 13.0px;
 	-fx-font-weight: bold;
@@ -23,8 +23,12 @@
 }
 .danger_button{
 	-fx-background-color: #DC143C;
+	-fx-font-size: 13.0px;
+	-fx-font-weight: bold;
+	-fx-background-radius: 2.0px;
+	-fx-effect: dropshadow( gaussian , rgba(0.0,0.0,0.0,0.4) , 10.0,0.0,2.0,2.0 ); 
 }
-.button:hover{
+.accept_button:hover{
 	-fx-background-color: #6ff9ff;
 	-fx-scale-y: 1.1;
 }
@@ -33,7 +37,7 @@
 	-fx-scale-y: 1.1;
 }
 
-.button .danger_button :pressed {
+.accept_button .danger_button :pressed {
     -fx-scale-y: 0.9;
     -fx-scale-x: 0.9;
 }
