--- a/src/main/resources/view/Login.fxml
+++ b/src/main/resources/view/Login.fxml
@@ -39,12 +39,12 @@
 				<TextField fx:id="txtHost" layoutY="100.0" prefWidth="173.0" promptText="https://demo.moodle.net" styleClass="text-field-login" stylesheets="@/css/style.css" />
 			</children>
 		</Group>
-		<Button id="Entrar" fx:id="btnLogin" cancelButton="false" defaultButton="true" disable="false" focusTraversable="true" graphicTextGap="5.0" layoutX="100.0" layoutY="455.0" mnemonicParsing="false" onAction="#login" prefWidth="70.0" text="%btn.enter" textOverrun="ELLIPSIS" underline="false" visible="true">
+		<Button id="Entrar" fx:id="btnLogin" cancelButton="false" defaultButton="true" disable="false" focusTraversable="true" graphicTextGap="5.0" layoutX="100.0" layoutY="455.0" mnemonicParsing="false" onAction="#login" prefWidth="70.0" styleClass="accept_button" text="%btn.enter" textOverrun="ELLIPSIS" underline="false" visible="true">
 			<font>
 				<Font size="14.0" fx:id="x2" />
 			</font>
 		</Button>
-		<Button fx:id="btnDelete" font="$x2" layoutX="230.0" layoutY="455.0" mnemonicParsing="false" onAction="#clear" prefWidth="70.0" stylesheets="@/css/style.css" text="%btn.clear" />
+		<Button fx:id="btnDelete" font="$x2" layoutX="230.0" layoutY="455.0" mnemonicParsing="false" onAction="#clear" prefWidth="70.0" styleClass="accept_button" stylesheets="@/css/style.css" text="%btn.clear" />
 		<ImageView fitHeight="250.0" fitWidth="250.0" layoutX="75.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
 			<image>
 				<Image url="@../img/logo.png" />
@@ -52,7 +52,7 @@
 		</ImageView>
 		<Label fx:id="lblStatus" alignment="CENTER" layoutX="13.0" layoutY="489.0" minHeight="27.0" minWidth="375.0" prefWidth="375.0" textAlignment="CENTER" textFill="#ff5050" wrapText="true">
          <font>
-            <Font size="12.0" />
+            <Font name="System Bold" size="12.0" />
          </font>
       </Label>
       <GridPane layoutX="60.0" layoutY="390.0" prefHeight="60.0" prefWidth="350.0">
