--- a/src/main/resources/view/Main.fxml
+++ b/src/main/resources/view/Main.fxml
@@ -8,22 +8,16 @@
 
 <BorderPane fx:id="canvas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.MainController">
 	<center>
-		<SplitPane fx:id="splitPane" dividerPositions="0.3422459893048128" BorderPane.alignment="CENTER">
+		<SplitPane fx:id="splitPane" dividerPositions="0.4" BorderPane.alignment="CENTER">
 			<items>
-				<BorderPane maxWidth="600.0" prefHeight="200.0" prefWidth="200.0">
-					<center>
-						<SplitPane fx:id="splitPaneLeft" dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+						<SplitPane fx:id="splitPaneLeft" dividerPositions="0.5" maxWidth="500.0" orientation="VERTICAL" SplitPane.resizableWithParent="false">
 							<items>
 
 								<fx:include fx:id="selectionUser" source="SelectionUser.fxml" />
-								<fx:include fx:id="selection" source="Selection.fxml" />
+                  <fx:include fx:id="selectionMain" source="SelectionMain.fxml" />
 							</items>
 						</SplitPane>
-					</center>
-				</BorderPane>
-				<BorderPane prefHeight="200.0" prefWidth="200.0">
-					<center>
-						<TabPane fx:id="webViewTabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+						<TabPane fx:id="webViewTabPane" tabClosingPolicy="UNAVAILABLE">
 							<tabs>
 								<Tab fx:id="visualizationTab" closable="false" text="%tab.visualization">
 
@@ -38,8 +32,6 @@
 
 							</tabs>
 						</TabPane>
-					</center>
-				</BorderPane>
 			</items>
 		</SplitPane>
 	</center>
