Refactor code in charts

--- a/src/main/resources/view/Main.fxml
+++ b/src/main/resources/view/Main.fxml
@@ -29,6 +29,11 @@
 									<fx:include fx:id="risk" source="Risk.fxml" />
 
 								</Tab>
+                  <Tab fx:id="forumTab" text="%tab.forum">
+                     <content>
+                        <fx:include fx:id="forum" source="ForumView.fxml" />
+                     </content>
+                  </Tab>
 
 							</tabs>
 						</TabPane>
