--- a/src/main/resources/view/Main.fxml
+++ b/src/main/resources/view/Main.fxml
@@ -34,6 +34,11 @@
                         <fx:include fx:id="forum" source="ForumView.fxml" />
                      </content>
                   </Tab>
+                  <Tab fx:id="clusteringTab" text="%tab.clustering">
+                     <content>
+                        <fx:include fx:id="clustering" source="Clustering.fxml" />
+                     </content>
+                  </Tab>
 
 							</tabs>
 						</TabPane>
