--- a/src/main/resources/view/AboutApp.fxml
+++ b/src/main/resources/view/AboutApp.fxml
@@ -25,10 +25,13 @@
     <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+      <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#openUBU" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
          <image>
             <Image url="@../img/Escudo%20Color%20TC.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -57,6 +60,7 @@
               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
@@ -67,8 +71,9 @@
                      </font>
                   </Label>
                   <Hyperlink onAction="#openAuthor1" text="Yi Peng Ji" GridPane.rowIndex="1" />
-                  <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor2" text="Raúl Marticorena Sánchez" GridPane.rowIndex="2" />
-                  <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor3" text="Carlos Pardo Aguilar" GridPane.rowIndex="3" />
+                  <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor2" text="Raúl Marticorena Sánchez" GridPane.rowIndex="3" />
+                  <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor3" text="Carlos Pardo Aguilar" GridPane.rowIndex="4" />
+                  <Hyperlink onAction="#openAuthor4" text="Xing Long Ji" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </center>
