Added buttons in network grah and added timeline lib

--- a/src/main/resources/css/chart.css
+++ b/src/main/resources/css/chart.css
@@ -1,4 +1,4 @@
-
+*{outline:none;}
 html,body
 {
 	overflow-x:hidden;
@@ -73,7 +73,8 @@ html,body
    	font-weight: bold;
 }
 
-#visDiv{
+.visDiv{
+	 outline: 0;
 	height:95vh;
 	width:100%;
 }
