--- a/src/main/resources/view/tabs/clustering/Classic.fxml
+++ b/src/main/resources/view/tabs/clustering/Classic.fxml
@@ -23,7 +23,7 @@
 <?import org.controlsfx.control.PropertySheet?>
 <?import org.controlsfx.control.RangeSlider?>
 
-<BorderPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.ClusteringController">
+<BorderPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.PartitionalClusteringController">
    <top>
       <GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
         <columnConstraints>
