--- a/src/main/resources/view/tabs/Clustering.fxml
+++ b/src/main/resources/view/tabs/Clustering.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 
-<TabPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.GeneralController">
+<TabPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.tabs.ClusteringController">
   <tabs>
     <Tab closable="false" text="%clustering.standard">
         <fx:include fx:id="classic" source="./clustering/Classic.fxml" />
