--- a/src/main/resources/view/tabs/Risk.fxml
+++ b/src/main/resources/view/tabs/Risk.fxml
@@ -14,25 +14,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.web.WebView?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.RiskController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.tabs.RiskController">
    <center>
-      <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
-         <children>
-            <WebView fx:id="webViewCharts" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
-            <BorderPane fx:id="borderPaneImage" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
-               <center>
-                  <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-                     <image>
-                        <Image url="@../img/logo.png" />
-                     </image>
-                  </ImageView>
-               </center>
-               <bottom>
-                  <ProgressBar fx:id="progressBar" progress="0.0" BorderPane.alignment="TOP_CENTER" />
-               </bottom>
-            </BorderPane>
-         </children>
-      </StackPane>
+      <fx:include fx:id="webView" source="../WebView.fxml" />
    </center>
    <bottom>
       <GridPane fx:id="optionsUbuLogs" BorderPane.alignment="CENTER">
