--- a/src/main/resources/view/tabs/Visualization.fxml
+++ b/src/main/resources/view/tabs/Visualization.fxml
@@ -15,25 +15,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.web.WebView?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.VisualizationController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.tabs.VisualizationController">
    <center>
-      <StackPane>
-         <children>
-            <WebView fx:id="webViewCharts" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" />
-            <BorderPane fx:id="borderPaneImage" style="-fx-background-color: white;">
-               <center>
-                  <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-                     <image>
-                        <Image url="@../img/logo.png" />
-                     </image>
-                  </ImageView>
-               </center>
-               <bottom>
-                  <ProgressBar fx:id="progressBar" progress="0.0" BorderPane.alignment="TOP_CENTER" />
-               </bottom>
-            </BorderPane>
-         </children>
-      </StackPane>
+      <fx:include fx:id="webView" source="../WebView.fxml" />
    </center>
    <bottom>
       <GridPane fx:id="optionsUbuLogs" BorderPane.alignment="CENTER">
